Revert "Revert "fix: safari z-index problem""
This reverts commit 17601903765c7756ff3dccab395e8dd8e12aa838.

--- a/packages/webgal/src/Components/UI/GlobalDialog/globalDialog.module.scss
+++ b/packages/webgal/src/Components/UI/GlobalDialog/globalDialog.module.scss
@@ -3,6 +3,7 @@
   width: 100%;
   position: absolute;
   z-index: 20;
+  transform: translateZ(20px);
   background: rgba(15, 37, 64, 0.39);
   color: white;
   opacity: 0.5;
