--- a/packages/webgal/src/Components/UI/Menu/menu.module.scss
+++ b/packages/webgal/src/Components/UI/Menu/menu.module.scss
@@ -3,6 +3,7 @@
   height: 100%;
   position: absolute;
   z-index: 16;
+  transform: translateZ(16px);
   //backdrop-filter: blur(1px);
   animation: Menu_ShowSoftly 0.5s forwards;
   background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%);
